Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <!-- Write your HTML here -->
   <table>
+    <th>City</th>
+    <th>State</th>
+    <th>2017 estimate</th>
+    
     
   </table>
 </body>
